Fix layout shifting on scrollable content

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    overflow-y: scroll;
+}
